add 'repository' to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "Adds right-click menu to 'ri' in rb and erb files",
 	"version": "0.0.1",
 	"publisher": "brianmcfadden",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/brianmcfadden/railsindex"
+	},
 	"engines": {
 		"vscode": "^1.37.0"
 	},
